# ocelescope-tools

./: .gitignore  README.md  pyproject.toml
src/ocelescope/: __init__.py
src/ocelescope/ocel/: __init__.py  extension.py  ocel.py
src/ocelescope/ocel/filter/: __init__.py  apply.py  attribute.py  base.py  entity_type.py  relation_count.py
src/ocelescope/ocel/filter/filters/: __init__.py  attribute.py  entity_type.py  relation_count.py  time_range.py
src/ocelescope/ocel/util/: __init__.py
src/ocelescope/plugin/: __init__.py  decorators.py  input.py
src/ocelescope/resource/: resource.py
src/ocelescope/resource/default/: PetriNet.py  dfg.py  petri_net.py
src/ocelescope/visualization/: __init__.py
src/ocelescope/visualization/default/: table.py
src/ocelescope_tools_grkmr/ocel/: extension.py  ocel.py
src/ocelescope_tools_grkmr/ocel/filter/: __init__.py  base.py  entity_type.py  relation_count.py  time_range.py
src/ocelescope_tools_grkmr/ocel/util/: attributes.py
