[project]
name = "ocelescope-tools"
version = "0.1.0"
description = "General tools for working with Object-Centric Event Logs and building OCELoscope plugins"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "cachetools>=6.1.0",
  "networkx>=3.5",
  "numpy>=2.3.2",
  "pandas>=2.3.1",
  "pm4py>=2.7.16",
  "pydantic>=2.11.7",
]

[dependency-groups]
dev = ["black>=25.1.0", "pre-commit>=4.2.0", "ruff>=0.12.7"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
fix = true
lint.ignore = ["E731", "E501"]
